--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode single",
     "preview": "vite preview",
-    "build:single": "vite build --mode single"
+    "build:single": "vite build --mode single",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:headed": "playwright test --headed",
+    "test:debug": "playwright test --debug"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.1",
     "cheerio": "^1.1.2",
     "vite": "^5.0.0"
   }
