--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug"
   },
+  "dependencies": {
+    "three": "^0.162.0"
+  },
   "devDependencies": {
     "@playwright/test": "^1.54.1",
     "cheerio": "^1.1.2",
