--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test:debug": "playwright test --debug"
   },
   "dependencies": {
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "vue": "^3.4.31"
   },
   "devDependencies": {
     "@playwright/test": "^1.54.1",
+    "@vitejs/plugin-vue": "^6.0.0",
     "cheerio": "^1.1.2",
     "vite": "^5.0.0"
   }
